# Whipsmart_Voice_Agent

./: .gitignore  README.md  agent_flow.py  bot.py  campaign_manager.py  funtions.py  hubspot_api.py  knowledge_base_prep.py  prompt.py  pyproject.toml  query_knowledebase.py  server.py  transcript_processor.py  web_scrapper.py
assets/: knowledgebase_formatted.txt  whipsmart_data.json
processor/: user_idle_handler.py
service/: campaign_service.py  twilio_service.py
utils/: function_schema.py  funtions.py  knowledge_base_prep.py  query_knowledebase.py  web_scrapper.py
