[project]
name = "twilio-chatbot-dial-out"
version = "0.1.0"
description = "Twilio dial-out example for Pipecat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pipecat-ai[websocket,azure,silero,elevenlabs,runner,google,deepgram]>=0.0.87",
  "pipecat-ai-flows",
  "pipecatcloud>=0.2.4",
  "twilio",
  "beautifulsoup4",
  "hubspot-api-client",
  "aiocache"
]
